# case-rush

./: .gitignore  README.md  app.py  case.py  config.py  config.toml  data.db  db.py  item.py  menus.py  pyproject.toml  requirements.txt  schema.sql  utils.py
case_rush/: app.py  config.py  db.py  paths.py  utils.py
case_rush/menu_actions/: __init__.py  open_web_inventory.py
case_rush/menus/: __init__.py  about_menu.py  cases_menu.py  help_menu.py  inventory_menu.py  items_menu.py  main_menu.py  settings_menu.py
case_rush/models/: case.py  item.py
data/: last_claim
src/: __init__.py  __version__.py  config.py  db.py  menus.py  paths.py  utils.py
src/menu_actions/: open_web_inventory.py
src/menus/: __init__.py  about_menu.py  cases_menu.py  confirm_menu.py  help_menu.py  inventory_menu.py  items_menu.py  main_menu.py  settings_menu.py
src/models/: __init__.py  case.py  item.py
templates/: inventory.html  output.html
